Name:          jaeger-sampler
Version:       0.0.0.0
Synopsis:      Samplers for Jaeger tracing
Category:      Network
Stability:     alpha

Author:        Nicolas Trangez
Maintainer:    ikke@nicolast.be
Copyright:     Copyright (C) 2017 Nicolas Trangez
License:       Apache-2.0
License-File:  LICENSE
Homepage:      https://github.com/haskell-service/jaeger
Bug-Reports:   https://github.com/haskell-service/jaeger/issues

Cabal-Version: >= 1.8
Build-Type:    Simple

Extra-Source-Files:
  README.md

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-service/jaeger.git
  Subdir:   jaeger-sampler

Library
  Exposed-Modules: Jaeger.Sampler
  Build-Depends:   base >= 4.9 && < 4.11
                 , jaeger-types >= 0.0 && < 0.1
                 , lens >= 4.15 && < 4.16
                 , text >= 1.2 && < 1.3
  Hs-Source-Dirs:  src
  Ghc-Options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-import-lists
    -Wredundant-constraints
    -g
