Name:          jaeger-utils
Version:       0.0.0.0
Synopsis:      Utilities for Jaeger application tracing
Category:      Network
Stability:     alpha

Author:        Nicolas Trangez
Maintainer:    ikke@nicolast.be
Copyright:     Copyright (C) 2017 Nicolas Trangez
License:       Apache-2.0
License-File:  LICENSE
Homepage:      https://github.com/haskell-service/jaeger
Bug-Reports:   https://github.com/haskell-service/jaeger/issues

Cabal-Version: >= 1.8
Build-Type:    Simple

Extra-Source-Files:
  README.md

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-service/jaeger.git
  Subdir:   jaeger-utils

Library
  Exposed-Modules: Jaeger.Clock
                 , Jaeger.Process
                 , Network.Jaeger
  Other-Modules:   Network.Ifaddrs
  Build-Depends:   base >= 4.9 && < 4.11
                 , clock >= 0.7 && < 0.8
                 , containers >= 0.5 && < 0.6
                 , jaeger-types >= 0.0 && < 0.1
                 , network >= 2.6 && < 2.7
                 , safe-exceptions >= 0.1 && < 0.2
                 , text >= 1.2 && < 1.3
                 , transformers-base >= 0.4 && < 0.5
                 , unix >= 2.7 && < 2.8
  Hs-Source-Dirs:  src
  Ghc-Options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-import-lists
    -Wredundant-constraints
    -g
