Name:          monad-jaeger-metrics-ekg
Version:       0.0.0.0
Synopsis:      A MonadJaegerMetrics implementation for EKG metrics
Category:      Network
Stability:     alpha

Author:        Nicolas Trangez
Maintainer:    ikke@nicolast.be
Copyright:     Copyright (C) 2017 Nicolas Trangez
License:       Apache-2.0
License-File:  LICENSE
Homepage:      https://github.com/haskell-service/jaeger
Bug-Reports:   https://github.com/haskell-service/jaeger/issues

Cabal-Version: >= 1.8
Build-Type:    Simple

Extra-Source-Files:
  README.md

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-service/jaeger.git
  Subdir:   monad-jaeger-metrics-ekg

Library
  Exposed-Modules: Control.Monad.Trans.JaegerMetrics.EKG
  Build-Depends:   base >= 4.9 && < 4.11
                 , ekg-core >= 0.1 && < 0.2
                 , exceptions >= 0.8 && < 0.9
                 , monad-control >= 1.0 && < 1.1
                 , monad-jaeger >= 0.0 && < 0.1
                 , mtl >= 2.2 && < 2.3
                 , resourcet >= 1.1 && < 1.2
                 , text >= 1.2 && < 1.3
                 , transformers >= 0.5 && < 0.6
                 , transformers-base >= 0.4 && < 0.5
  Hs-Source-Dirs:  src
  Ghc-Options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-import-lists
    -Wredundant-constraints
    -g
