Name:          monad-jaeger-metrics-prometheus
Version:       0.0.0.0
Synopsis:      A MonadJaegerMetrics implementation for Prometheus metrics
Category:      Network
Stability:     alpha

Author:        Nicolas Trangez
Maintainer:    ikke@nicolast.be
Copyright:     Copyright (C) 2017 Nicolas Trangez
License:       Apache-2.0
License-File:  LICENSE
Homepage:      https://github.com/haskell-service/jaeger
Bug-Reports:   https://github.com/haskell-service/jaeger/issues

Cabal-Version: >= 1.8
Build-Type:    Simple

Extra-Source-Files:
  README.md

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-service/jaeger.git
  Subdir:   monad-jaeger-metrics-prometheus

Library
  Exposed-Modules: Control.Monad.Trans.JaegerMetrics.Prometheus
  Build-Depends:   base >= 4.9 && < 4.11
                 , exceptions >= 0.8 && < 0.9
                 , lens >= 4.15 && < 4.16
                 , monad-control >= 1.0 && < 1.1
                 , monad-jaeger >= 0.0 && < 0.1
                 , mtl >= 2.2 && < 2.3
                 , prometheus-effect >= 1.0 && < 1.1
                 , resourcet >= 1.1 && < 1.2
                 , text >= 1.2 && < 1.3
                 , transformers >= 0.5 && < 0.6
                 , transformers-base >= 0.4 && < 0.5
                 , unordered-containers >= 0.2 && < 0.3
  Hs-Source-Dirs:  src
  Ghc-Options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-import-lists
    -Wredundant-constraints
    -g

Executable monad-jaeger-metrics-prometheus-example
  Main-Is:        Main.hs
  Build-Depends:  base >= 4.9 && < 4.11
                , exceptions >= 0.8 && < 0.9
                , jaeger-sampler >= 0.0 && < 0.1
                , jaeger-types >= 0.0 && < 0.1
                , jaeger-utils >= 0.0 && < 0.1
                , lifted-base >= 0.2 && < 0.3
                , monad-jaeger >= 0.0 && < 0.1
                , monad-jaeger-metrics-ekg >= 0.0 && < 0.1
                , monad-logger >= 0.3 && < 0.4
                , monad-logger-jaeger >= 0.0 && < 0.1
                , prometheus-effect >= 1.0 && < 1.1
                , servant >= 0.11 && < 0.12
                , servant-jaeger >= 0.0 && < 0.1
                , transformers-base >= 0.4 && < 0.5
                , warp >= 3.2 && < 3.3
                , monad-jaeger-metrics-prometheus
  Hs-Source-Dirs: examples
  Ghc-Options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-import-lists
    -Wredundant-constraints
    -g
    -rtsopts
    -with-rtsopts=-T
