Name:          monad-jaeger
Version:       0.0.0.0
Synopsis:      A monadic framework to add Jaeger tracing to an application
Category:      Network
Stability:     alpha

Author:        Nicolas Trangez
Maintainer:    ikke@nicolast.be
Copyright:     Copyright (C) 2017 Nicolas Trangez
License:       Apache-2.0
License-File:  LICENSE
Homepage:      https://github.com/haskell-service/jaeger
Bug-Reports:   https://github.com/haskell-service/jaeger/issues

Cabal-Version: >= 1.8
Build-Type:    Simple

Extra-Source-Files:
  README.md

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-service/jaeger.git
  Subdir:   monad-jaeger

Library
  Exposed-Modules: Control.Monad.Jaeger.Class
                 , Control.Monad.JaegerMetrics.Class
                 , Control.Monad.JaegerTrace.Class
                 , Control.Monad.Trans.Jaeger
                 , Control.Monad.Trans.JaegerMetrics
                 , Control.Monad.Trans.JaegerTrace
  Other-Modules:   Network.Socket.MTU
  Build-Depends:   base >= 4.9 && < 4.11
                 , bytestring >= 0.10 && < 0.11
                 , containers >= 0.5 && < 0.6
                 , ekg-core >= 0.1 && < 0.2
                 , exceptions >= 0.8 && < 0.9
                 , jaeger-opentracing-tags >= 0.0 && < 0.1
                 , jaeger-sampler >= 0.0 && < 0.1
                 , jaeger-types >= 0.0 && < 0.1
                 , jaeger-utils >= 0.0 && < 0.1
                 , lens >= 4.15 && < 4.16
                 , lifted-base >= 0.2 && < 0.3
                 , monad-control >= 1.0 && < 1.1
                 , monad-unlift-ref >= 0.2 && < 0.3
                 , mtl >= 2.2 && < 2.3
                 , network >= 2.6 && < 2.7
                 , random >= 1.1 && < 1.2
                 , resourcet >= 1.1 && < 1.2
                 , safe-exceptions >= 0.1 && < 0.2
                 , stm >= 2.4 && < 2.5
                 , text >= 1.2 && < 1.3
                 , transformers >= 0.5 && < 0.6
                 , transformers-base >= 0.4 && < 0.5
  Hs-Source-Dirs:  src
  Ghc-Options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-import-lists
    -Wredundant-constraints
    -g

  -- Handling of '-Wredundant-constraints' of GHC 8.2.1 is broken.
  -- See https://ghc.haskell.org/trac/ghc/ticket/14237
  if impl(ghc == 8.2.1)
    Ghc-Options:
      -fno-warn-redundant-constraints

Executable monad-jaeger-example
  Build-Depends:  base >= 4.9 && < 4.11
                , ekg-core >= 0.1 && < 0.2
                , jaeger-sampler >= 0.0 && < 0.1
                , jaeger-types >= 0.0 && < 0.1
                , jaeger-utils >= 0.0 && < 0.1
                , lifted-base >= 0.2 && < 0.3
                , safe-exceptions >= 0.1 && < 0.2
                , text >= 1.2 && < 1.3
                , transformers >= 0.5 && < 0.6
                , unordered-containers >= 0.2 && < 0.3
                , monad-jaeger
  Main-Is:        Main.hs
  Hs-Source-Dirs: examples
  Ghc-Options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-import-lists
    -Wredundant-constraints
    -g
