Name:          monad-logger-jaeger
Version:       0.0.0.0
Synopsis:      A monad-logger middleware which attaches log entries to Jaeger spans
Category:      Network
Stability:     alpha

Author:        Nicolas Trangez
Maintainer:    ikke@nicolast.be
Copyright:     Copyright (C) 2017 Nicolas Trangez
License:       Apache-2.0
License-File:  LICENSE
Homepage:      https://github.com/haskell-service/jaeger
Bug-Reports:   https://github.com/haskell-service/jaeger/issues

Cabal-Version: >= 1.8
Build-Type:    Simple

Extra-Source-Files:
  README.md

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-service/jaeger.git
  Subdir:   monad-logger-jaeger

Library
  Exposed-Modules: Control.Monad.Logger.Jaeger
  Build-Depends:   base >= 4.9 && < 4.11
                 , exceptions >= 0.8 && < 0.9
                 , fast-logger >= 2.4 && < 2.5
                 , jaeger-opentracing-tags >= 0.0 && < 0.1
                 , jaeger-types >= 0.0 && < 0.1
                 , monad-control >= 1.0 && < 1.1
                 , monad-jaeger >= 0.0 && < 0.1
                 , monad-logger >= 0.3 && < 0.4
                 , mtl >= 2.2 && < 2.3
                 , resourcet >= 1.1 && < 1.2
                 , text >= 1.2 && < 1.3
                 , transformers >= 0.5 && < 0.6
                 , transformers-base >= 0.4 && < 0.5
  Hs-Source-Dirs:  src
  Ghc-Options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-import-lists
    -Wredundant-constraints
    -g

Executable monad-logger-jaeger-example
  Build-Depends: base >= 4.9 && < 4.11
               , jaeger-utils >= 0.0 && < 0.1
               , lifted-base >= 0.2 && < 0.3
               , monad-jaeger >= 0.0 && < 0.1
               , monad-logger >= 0.3 && < 0.4
               , monad-logger-jaeger
  Main-Is: Main.hs
  Hs-Source-Dirs: examples
  Ghc-Options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-import-lists
    -Wredundant-constraints
    -g
